packages/jsii/test/negatives/neg.static-method-name.1.ts
///!MATCH_ERROR: ERROR 'MethodIsNotCamelCase' must use camel-case

export class MyClass {
    MethodIsNotCamelCase() {
        return "hi";
    }
}
